--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RedDonor</title>
   </head>
-  <body>
+  <body class="font-display">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
